--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -40,81 +40,83 @@
     <section class="container-fluid">
         <div class="container p-5">
             <h2>Informations légales</h2>
-            <h3>1. Présentation du site.</h3>
-            <p>In principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit</p>
+            <h3>1. Présentation du site </h3>
+            <p>Le présent site internet a pour objectif de fournir des informations, des services ou des produits liés à [nom de l'entreprise ou du service]. En accédant au Site, vous acceptez de respecter les conditions générales d’utilisation définies ci-après. </p>
             
-            <h3>2. Conditions générales d’utilisation du site et des services proposés.</h3>
-            <p>In principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit</p>
-            <h3>3. Description des services fournis.</h3>
-            <p>In principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit</p>
-            <h3>4. Limitations contractuelles sur les données techniques.</h3>
-            <p>In principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit</p>
-            <h3>5. Propriété intellectuelle et contrefaçons.</h3>
-            <p>In principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit</p>
-            <h3>6. Limitations de responsabilité.</h3>
-            <p>In principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit</p>
-            <h3>7. Gestion des données personnelles.</h3>
-            <p>In principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit</p>
-            <h3>8. Liens hypertextes et cookies.</h3>
-            <p>In principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit</p>
+            <h3>2. Conditions générales d’utilisation du site et des services proposés</h3>
+            <p>Les présentes conditions générales d’utilisation régissent l’accès et l’utilisation du site. En utilisant ce site, vous acceptez de vous conformer à ces conditions.</p>
+            <h3>3. Description des services fournis</h3>
+            <p>Le site est principalement à titre informatif mais il propose également d’acheter des places pour le festival en ligne. Ces services sont accessibles sous réserve du respect des présentes conditions générales.</p>
+            <h3>4. Limitations contractuelles sur les données techniques</h3>
+            <p>Le site ne peut garantir une disponibilité permanente, ni l'absence de dysfonctionnements. L'utilisateur est informé que les données transmises via Internet peuvent être altérées ou corrompues et que la confidentialité des informations échangées n’est pas assurée par le biais de ce réseau.</p>
+            <h3>5. Propriété intellectuelle et contrefaçons</h3>
+            <p>Tous les éléments présents sur le Site (textes, images, logos, vidéos, etc.) sont utilisés avec autorisation. Toute reproduction ou représentation, totale ou partielle, sans autorisation préalable est interdite et constitue une contrefaçon.</p>
+            <h3>6. Limitations de responsabilité</h3>
+            <p>Le site met tout en œuvre pour fournir des informations et services exacts et actualisés. Toutefois, il ne pourra être tenu responsable des erreurs, omissions, ou interruptions des services proposés. L'utilisateur est seul responsable de l'utilisation des informations fournies sur le site.</p>
+            <h3>7. Gestion des données personnelles</h3>
+            <p>Conformément à la législation en vigueur, le site s'engage à protéger la vie privée des utilisateurs du Site. Les données personnelles collectées seront utilisées uniquement dans le cadre des services proposés par le Site, conformément à la politique de confidentialité disponible sur le site.</p>
+            <h3>8. Liens hypertextes et cookies</h3>
+            <p>Le site peut contenir des liens hypertextes vers d’autres sites. Il n'est pas responsable du contenu de ces sites externes. De plus, des cookies peuvent être utilisés pour améliorer l’expérience utilisateur sur le site. Vous pouvez gérer vos préférences de cookies via votre navigateur.</p>
             
-            <h3>9. Droit applicable et attribution de juridiction.</h3>
-            <p>In principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit</p>
-            <h3>10. Les principales lois concernées.</h3>
-            <p>In principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit</p>
-            <h3>11. Lexique.</h3>
-            <p>In principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit</p>
+            <h3>9. Droit applicable et attribution de juridiction</h3>
+            <p>Les présentes conditions sont régies par le droit français. En cas de litige, les tribunaux de Paris seront compétents, sous réserve d’une attribution spécifique de juridiction.</p>
+            <h3>10. Les principales lois concernées</h3>
+            <p>Les lois applicables incluent notamment la loi sur la protection des données personnelles (Règlement Général sur la Protection des Données - RGPD), ainsi que la législation relative aux droits d'auteur et à la propriété intellectuelle.</p>
+            <h3>11. Lexique</h3>
+            <p>- **Cookies** : Petits fichiers enregistrés sur votre appareil pour améliorer votre expérience de navigation.
+                - **Données personnelles** : Toute information permettant d'identifier une personne, telle que le nom, l’adresse e-mail, ou l’adresse IP.</p>
         </div>
     </section>
+
 	<!--07.footer-->
-    <footer class="container-fluid footer">
-		<div class="container py-3">
-            <div class="row">
-                <div class="col-12 col-md-3">
-                    <h2>Liens utiles</h2>
-                    <div class="footerLinks">
-                        <a href="index.html">Accueil</a>
-                        <a href="films.html">Les Films</a>
-                        <a href="blog.html">Actualités</a>
-                        <a href="contact.html">Contact</a>
-                        <a href="mentions-legales.html">Mentions légales</a>
+		<footer class="container-fluid footer">
+            <div class="container py-3">
+                <div class="row">
+                    <div class="col-12 col-md-3">
+                        <h2>Liens utiles</h2>
+                        <div class="footerLinks">
+                            <a href="index.html">Accueil</a>
+                            <a href="films.html">Les Films</a>
+                            <a href="blog.html">Actualités</a>
+                            <a href="contact.html">Contact</a>
+                            <a href="mentions-legales.html">Mentions légales</a>
+                        </div>
                     </div>
-                </div>
-                <div class="col-12 col-md-3 address">
-                    <h2>Contactez-nous</h2>
-                    <div class="contactIcons mb-3">
-                        <p><span class="pr-3"><i class="fas fa-home"></i></span>-Adresse-</p>
-                        <p><span class="pr-3"><i class="fas fa-envelope"></i></span>-Mail-</p>
-                        <p><span class="pr-3"><i class="fas fa-phone"></i></span>-Tél.-</p>
+                    <div class="col-12 col-md-3 address">
+                        <h2>Contactez-nous</h2>
+                        <div class="contactIcons mb-3">
+                            <p><span class="pr-3"><i class="fas fa-home"></i></span>-Parc Monceau-</p>
+                            <p><span class="pr-3"><i class="fas fa-envelope"></i></span>-lesfilmsdepleinair@gmail.com-</p>
+                            <p><span class="pr-3"><i class="fas fa-phone"></i></span>-0144730280-</p>
+                        </div>
                     </div>
-                </div>
-                <div class="col-12 col-md-3 partenaire">
-                    <h2>Partenariat</h2>
-                    <div class="contactIcons mb-3">
-                        <ul>
-                            <li>-Partenaire 1-</li>
-                            <li>-Partenaire 2-</li>
-                            <li>-Partenaire 3-</li>
-                        </ul>
+                    <div class="col-12 col-md-3 partenaire">
+                        <h2>Partenariat</h2>
+                        <div class="contactIcons mb-3">
+                            <ul>
+                                <li>-Marie de Paris-</li>
+                                <li>-Régions île de France-</li>
+                                <li>-France télévision-</li>
+                            </ul>
+                        </div>
                     </div>
-                </div>
-                <div class="col-12 col-md-3 social">
-                    <h2>Suivez-nous !</h2>
-                    <div class="socialicons">
-                        <a href="#"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#"><i class="fab fa-youtube"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
+                    <div class="col-12 col-md-3 social">
+                        <h2>Suivez-nous !</h2>
+                        <div class="socialicons">
+                            <a href="#"><i class="fab fa-facebook-f"></i></a>
+                            <a href="#"><i class="fab fa-youtube"></i></a>
+                            <a href="#"><i class="fab fa-instagram"></i></a>
+                        </div>
                     </div>
-                </div>
-            </div>	
-        </div>
-        <div class="socketBkg ">
-            <div class="socket text-center">
-                <p>Copyright - Site réalisé par <br>
-                    Université Côte d'Azur - <a href="https://univ-cotedazur.fr/" target="_blank">Univ-Côte d'Azur</a></p>
+                </div>	
             </div>
-        </div>
-    </footer>
+            <div class="socketBkg ">
+                <div class="socket text-center">
+                    <p>Copyright - Site réalisé par Clara & Lorette <br>
+                        Université Côte d'Azur - <a href="https://univ-cotedazur.fr/" target="_blank">Univ-Côte d'Azur</a></p>
+                </div>
+            </div>
+		</footer>
 		<!--end footer-->
 
 	<!--Scroll to top button-->
