--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 			<div class="container">
 				<div class="row">
 					<aside class="col-lg-6">
-						<!--<img src="images/05-resaAside.jpg"class="img-fluid" alt="image avec écrit Newsletter dessus">-->
+						<img src="images/05-resaAside.jpg"class="img-fluid" alt="image avec écrit Newsletter dessus">
 					</aside>
 					<article class="col-lg-6">
 						<h2 id="booking">Réservation en ligne</h2>
