--- a/films.html
+++ b/films.html
@@ -69,7 +69,7 @@
 				<aside class="col-sm-4"></aside>
 				<article class="col-sm-8">
 					<h2>-Will & Harper-</h2>
-					<h3>-Lundi 4 août à 22h-</h3>
+					<h3>-Jeudi 7 août à 22h-</h3>
 					<h3>-Voyage, amitié et défis-</h3>
 					<div class="note">
 						<i class="fas fa-star"></i>
@@ -93,7 +93,7 @@
 			<div class="row film02">
 				<article class="col-sm-8">
 					<h2>-American Honey-</h2>
-					<h3>-Lundi 4 août à minuit-</h3>
+					<h3>-Jeudi 7 août à minuit-</h3>
 					<h3>-Poétique quête de liberté dans le Midwest américain-</h3>
 					<div class="note">
 						<i class="fas fa-star"></i>
@@ -248,7 +248,7 @@
 				<aside class="col-sm-4"></aside>
 				<article class="col-sm-8">
 					<h2>-Se souvenir d'une ville-</h2>
-					<h3>-Lundi 4 août à 23h-</h3>
+					<h3>-Jeudi 7 août à 23h-</h3>
 					<h3>-Sarajevo et guerre : entre résilience et découverte-</h3>
 					<div class="note">
 						<i class="fas fa-star"></i>
@@ -275,7 +275,7 @@
 			<div class="row film08">
 				<article class="col-sm-8">
 					<h2>-E.1027-</h2>
-					<h3>-Lundi 4 août à 21h-</h3>
+					<h3>-Jeudi 7 août à 21h-</h3>
 					<h3>-Découvrez l'histoire de l'architecte irlandaise Eileen Gray-</h3>
 					<div class="note">
 						<i class="fas fa-star"></i>
