--- a/index.html
+++ b/index.html
@@ -228,10 +228,11 @@
 								<label for="seance">Séances</label>
 								<select class="form-control" required name="seance" id="seance">
 										<option value="" selected disabled>Ma Séance</option>
-									<optgroup label="Date 1">
-										<option value="Heure 1">Heure - Film</option>
-										<option value="Heure 2">Heure - Film</option>
-										<option value="Heure 3">Heure - Film</option>
+									<optgroup label="Mardi 5 août">
+										<option value="Heure 1">19h00 - Nomadland</option>
+										<option value="Heure 2">22h00 - L'histoire de Souleymane</option>
+										<option value="Heure 3">22h00 - Compariment n6</option>
+										<option value="Heure 4">23h00 - La traversée</option>
 									</optgroup>
 									<optgroup label="Date 2">
 										<option value="Heure 1">Heure - Film</option>
