--- a/index.html
+++ b/index.html
@@ -229,26 +229,24 @@
 								<select class="form-control" required name="seance" id="seance">
 										<option value="" selected disabled>Ma Séance</option>
 									<optgroup label="Mardi 5 août">
-										<option value="Heure 1">19h00 - Nomadland</option>
-										<option value="Heure 2">22h00 - L'histoire de Souleymane</option>
+										<option value="Heure 1">18h00 - Nomadland</option>
+										<option value="Heure 2">21h00 - L'histoire de Souleymane</option>
 										<option value="Heure 3">22h00 - Compariment n6</option>
 										<option value="Heure 4">23h00 - La traversée</option>
 									</optgroup>
-									<optgroup label="Date 2">
-										<option value="Heure 1">Heure - Film</option>
-										<option value="Heure 2">Heure - Film</option>
-										<option value="Heure 3">Heure - Film</option>
+									<optgroup label="Mercredi 6 août">
+										<option value="Heure 1">18h00 - Mon royaume</option>
+										<option value="Heure 2">20h00 - La chimère</option>
+										<option value="Heure 3">21h00 - Perfect days</option>
+										<option value="Heure 3">22h00 - E.1027</option>
 									</optgroup>
 									<optgroup label="Date 3">
-										<option value="Heure 1">Heure - Film</option>
-										<option value="Heure 2">Heure - Film</option>
-										<option value="Heure 3">Heure - Film</option>
+										<option value="Heure 1">18h00 - Will & Harper</option>
+										<option value="Heure 2">20h30 - American Honey</option>
+										<option value="Heure 3">22h00 - Viêt and Nam</option>
+										<option value="Heure 3">22h00 - Se souvenir d'une ville</option>
 									</optgroup>
-									<optgroup label="Date 4">
-										<option value="Heure 1">Heure - Film</option>
-										<option value="Heure 2">Heure - Film</option>
-										<option value="Heure 3">Heure - Film</option>
-									</optgroup>
+									
 								</select>
 								<div class="invalid-tooltip">
 									Merci de choisir votre séance.
