--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 										<option value="Heure 3">21h00 - Perfect days</option>
 										<option value="Heure 3">22h00 - E.1027</option>
 									</optgroup>
-									<optgroup label="Date 3">
+									<optgroup label="Jeudi 7 août">
 										<option value="Heure 1">18h00 - Will & Harper</option>
 										<option value="Heure 2">20h30 - American Honey</option>
 										<option value="Heure 3">22h00 - Viêt and Nam</option>
