--- a/films.html
+++ b/films.html
@@ -69,7 +69,7 @@
 				<aside class="col-sm-4"></aside>
 				<article class="col-sm-8">
 					<h2>-Will & Harper-</h2>
-					<h3>-Jeudi 7 août à 22h-</h3>
+					<h3>-Jeudi 7 août à 18h00-</h3>
 					<h3>-Voyage, amitié et défis-</h3>
 					<div class="note">
 						<i class="fas fa-star"></i>
@@ -93,7 +93,7 @@
 			<div class="row film02">
 				<article class="col-sm-8">
 					<h2>-American Honey-</h2>
-					<h3>-Jeudi 7 août à minuit-</h3>
+					<h3>-Jeudi 7 août à 20h30-</h3>
 					<h3>-Poétique quête de liberté dans le Midwest américain-</h3>
 					<div class="note">
 						<i class="fas fa-star"></i>
@@ -155,7 +155,7 @@
 				<aside class="col-sm-4"></aside>
 				<article class="col-sm-8">
 					<h2>-La Traversée-</h2>
-					<h3>-Mardi 5 août à 23h30-</h3>
+					<h3>-Mardi 5 août à 23h00-</h3>
 					<h3>-Aventure en mer et leçon de vie-</h3>
 					<div class="note">
 						<i class="fas fa-star"></i>
@@ -182,7 +182,7 @@
 			<div class="row film05">
 				<article class="col-sm-8">
 					<h2>-Viêt and Nam-</h2>
-					<h3>-Mardi 5 août à minuit-</h3>
+					<h3>-Jeudi 7 août à 22h00-</h3>
 					<h3>-Voyage et défis du passé-</h3>
 					<div class="note">
 						<i class="fas fa-star"></i>
@@ -211,7 +211,7 @@
 				<aside class="col-sm-4"></aside>
 				<article class="col-sm-8">
 					<h2>-Mon Royaume-</h2>
-					<h3>-Mercredi 6 août à 21h30-</h3>
+					<h3>-Mercredi 6 août à 18h00-</h3>
 					<h3>-Partez à l'aventure dans la Corse des années 90-</h3>
 					<div class="note">
 						<i class="fas fa-star"></i>
@@ -248,7 +248,7 @@
 				<aside class="col-sm-4"></aside>
 				<article class="col-sm-8">
 					<h2>-Se souvenir d'une ville-</h2>
-					<h3>-Jeudi 7 août à 23h-</h3>
+					<h3>-Jeudi 7 août à 22h00-</h3>
 					<h3>-Sarajevo et guerre : entre résilience et découverte-</h3>
 					<div class="note">
 						<i class="fas fa-star"></i>
@@ -275,7 +275,7 @@
 			<div class="row film08">
 				<article class="col-sm-8">
 					<h2>-E.1027-</h2>
-					<h3>-Jeudi 7 août à 21h-</h3>
+					<h3>-Mercredi 6 août à 22h00-</h3>
 					<h3>-Découvrez l'histoire de l'architecte irlandaise Eileen Gray-</h3>
 					<div class="note">
 						<i class="fas fa-star"></i>
@@ -304,7 +304,7 @@
 				<aside class="col-sm-4"></aside>
 				<article class="col-sm-8">
 					<h2>-L'Histoire de Souleymane -</h2>
-					<h3>-Mardi 5 août à 22h-</h3>
+					<h3>-Mardi 5 août à 21h00-</h3>
 					<h3>-Histoire vraie de Souleymane-</h3>
 					<div class="note">
 						<i class="fas fa-star"></i>
@@ -341,7 +341,7 @@
 					<aside class="col-sm-4"></aside>
 					<article class="col-sm-8">
 						<h2>-La Chimère-</h2>
-					    <h3>-Mercredi 6 août à 22h-</h3>
+					    <h3>-Mercredi 6 août à 20h00-</h3>
 					    <h3>-Amour et trésors perdus-</h3>
 						<div class="note">
 							<i class="fas fa-star"></i>
@@ -368,7 +368,7 @@
 				<div class="row film11">
 					<article class="col-sm-8">
 						<h2>-Perfect Days-</h2>
-					    <h3>-Mercredi 6 août à minuit-</h3>
+					    <h3>-Mercredi 6 août à 21h00-</h3>
 					    <h3>-Rencontres inattendues à Tokyo-</h3>
 						<div class="note">
 							<i class="fas fa-star"></i>
@@ -397,7 +397,7 @@
 					<aside class="col-sm-4"></aside>
 					<article class="col-sm-8">
 						<h2>-Nomadland-</h2>
-					    <h3>-Mardi 5 août à 19h-</h3>
+					    <h3>-Mardi 5 août à 18h00-</h3>
 					    <h3>-Survivre au deuil en changeant de vie-</h3>
 						<div class="note">
 							<i class="fas fa-star"></i>
