--- a/blog.html
+++ b/blog.html
@@ -40,7 +40,7 @@
 	<!--00.header-->
 	<nav class="navbar sticky-top navbar-expand-lg navbar-dark maNav">
 		<a class="navbar-brand" href="index.html">
-			<img src="images/logo.jpg" width="100"/>
+			<img src="images/logo.jpg" width="100" alt="logo du site qui est une bobine"/>
 		</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
@@ -64,7 +64,7 @@
             </div>
             <div class="row  justify-content-center">
                 <div class="card m-2 px-0 col-12  col-md-4 col-lg-3" style="width: 18rem;">
-                    <img class="card-img-top" src="images/01-actu.jpg" alt="">
+                    <img class="card-img-top" src="images/01-actu.jpg" alt="des mains qui font un coeur devant la mer">
                     <div class="card-body">
                         <h5 class="card-title">-Film Coup de Cœur-</h5>
                         <p class="infoBlog">-Info- | Par Antoine Bergera</p>
@@ -73,7 +73,7 @@
                     </div>
                 </div>
                 <div class="card m-2 px-0 col-12  col-md-4 col-lg-3" style="width: 18rem;">
-                    <img class="card-img-top" src="images/02-actu.jpg" alt="">
+                    <img class="card-img-top" src="images/02-actu.jpg" alt="une loupe">
                     <div class="card-body">
                         <h5 class="card-title">-Anecdotes Insolites sur "Will & Harper"-</h5>
                         <p class="infoBlog">-Info- | Par Camille Rochefort</p>
@@ -82,7 +82,7 @@
                     </div>
                 </div>
                 <div class="card m-2 px-0 col-12  col-md-4 col-lg-3" style="width: 18rem;">
-                    <img class="card-img-top" src="images/03-actu.jpg" alt="">
+                    <img class="card-img-top" src="images/03-actu.jpg" alt="une main qui tient un arbre">
                     <div class="card-body">
                         <h5 class="card-title">-Les Engagements Écologiques-</h5>
                         <p class="infoBlog">-Info- | Par Julien Morel</p>
@@ -91,7 +91,7 @@
                     </div>
                 </div>
                 <div class="card m-2 px-0 col-12  col-md-4 col-lg-3" style="width: 18rem;">
-                    <img class="card-img-top" src="images/04-actu.jpg" alt="">
+                    <img class="card-img-top" src="images/04-actu.jpg" alt="deux personnes en interview">
                     <div class="card-body">
                         <h5 class="card-title">-Interview Exclusive de Jennifer Vialet-</h5>
                         <p class="infoBlog">-Info- | Par Sophie Lemaitre</p>
@@ -100,7 +100,7 @@
                     </div>
                 </div>
                 <div class="card m-2 px-0 col-12  col-md-4 col-lg-3" style="width: 18rem;">
-                    <img class="card-img-top" src="images/05-actu.jpg" alt="">
+                    <img class="card-img-top" src="images/05-actu.jpg" alt="dessin de deux personnes en interview">
                     <div class="card-body">
                         <h5 class="card-title">-Ce Que Vous Pensez du festival-</h5>
                         <p class="infoBlog">-Info- | Par Victor Delaunay</p>
@@ -109,7 +109,7 @@
                     </div>
                 </div>
                 <div class="card m-2 px-0 col-12  col-md-4 col-lg-3" style="width: 18rem;">
-                    <img class="card-img-top" src="images/06-actu.jpg" alt="">
+                    <img class="card-img-top" src="images/06-actu.jpg" alt="un rétroviseur">
                     <div class="card-body">
                         <h5 class="card-title">-Rétrospective-</h5>
                         <p class="infoBlog">-Info- | Par Élodie Marchand</p>
