--- a/index.html
+++ b/index.html
@@ -339,12 +339,16 @@
                         </div>
                     </div>
                     <div class="col-12 col-md-3 social">
-                        <h2>Suivez-nous !</h2>
-                        <div class="socialicons">
-                            <a href="#"><i class="fab fa-facebook-f"></i></a>
-                            <a href="#"><i class="fab fa-youtube"></i></a>
-                            <a href="#"><i class="fab fa-instagram"></i></a>
-                        </div>
+						<a href="https://facebook.com" aria-label="Facebook">
+						   <img src="facebook.png" alt="Facebook">
+						</a>
+						<a href="https://youtube.com" aria-label="YouTube">
+						   <img src="youtube.png" alt="YouTube">
+						</a>
+						<a href="https://instagram.com" aria-label="Instagram">
+						   <img src="instagram.png" alt="Instagram">
+						</a>
+					 </div>
                     </div>
                 </div>	
             </div>
