--- a/index.html
+++ b/index.html
@@ -340,13 +340,13 @@
                     </div>
                     <div class="col-12 col-md-3 social">
 						<a href="https://facebook.com" aria-label="Facebook">
-						   <img src="facebook.png" alt="Facebook">
+						   <img src="images/facebook.png" alt="Facebook">
 						</a>
 						<a href="https://youtube.com" aria-label="YouTube">
-						   <img src="youtube.png" alt="YouTube">
+						   <img src="images/youtube.png" alt="YouTube">
 						</a>
 						<a href="https://instagram.com" aria-label="Instagram">
-						   <img src="instagram.png" alt="Instagram">
+						   <img src="images/instagram.png" alt="Instagram">
 						</a>
 					 </div>
                     </div>
