--- a/index.html
+++ b/index.html
@@ -339,6 +339,7 @@
                         </div>
                     </div>
                     <div class="col-12 col-md-3 social">
+						<h2>Suivez-nous !</h2>
 						<a href="https://facebook.com" aria-label="Facebook">
 						   <img src="images/facebook.png" alt="Facebook">
 						</a>
