--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -102,11 +102,15 @@
                     </div>
                     <div class="col-12 col-md-3 social">
                         <h2>Suivez-nous !</h2>
-                        <div class="socialicons">
-                            <a href="#"><i class="fab fa-facebook-f"></i></a>
-                            <a href="#"><i class="fab fa-youtube"></i></a>
-                            <a href="#"><i class="fab fa-instagram"></i></a>
-                        </div>
+                        <a href="https://facebook.com" aria-label="Facebook">
+                           <img src="images/facebook.png" alt="Facebook">
+                        </a>
+                        <a href="https://youtube.com" aria-label="YouTube">
+                           <img src="images/youtube.png" alt="YouTube">
+                        </a>
+                        <a href="https://instagram.com" aria-label="Instagram">
+                           <img src="images/instagram.png" alt="Instagram">
+                        </a>
                     </div>
                 </div>	
             </div>
