--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
 	<!--end header-->
 	<!--Map-->
 	<section class="container-fluid">
-		<iframe src="images/Carte_bis.jpg" width="100%" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
+		<iframe src="images/Carte_bis.jpg" width="100%" height="350" frameborder="0" style="border:0" allowfullscreen title="Carte de localisation"></iframe>
     </section>
 	<section class="container-fluid contactPage">
 		<div class="container py-5">
@@ -106,7 +106,7 @@
 					<p>
 						Vous pouvez nous contacter du lundi au vendredi aux horaires suivantes : 9h00-12h00 et 14h00-18h00
 					</p>
-					<div class="banContact"><img src="images/BanContact.jpg" alt=""></div>
+					<div class="banContact"><img src="images/BanContact.jpg" alt="contact"></div>
 				</div>
 			</div>
 		</div>
