--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
 							Le festival bat son plein au parc Monceau, et cette édition sur le thème du voyage nous réserve encore bien des surprises ! Entre projections sous les étoiles, rencontres avec les réalisateurs et engagements écoresponsables, l’événement séduit un public toujours plus nombreux. Découvrez dès maintenant notre dernier article exclusif et plongez dans les coulisses du film "Will & Harper", un road-trip captivant ponctué d’anecdotes insolites !</p>
 
-						<p>-Lien possible-<a href="https://calafac.github.io/Festival/blog.html">ici</a>.</p>
+						<p>-Cliquez ici pour voir nos actualiés-<a href="https://calafac.github.io/Festival/blog.html">ici</a>.</p>
 						<p>Parcourez notre site et découvrez notre festival </p>
 						<a href="rendez-vous-le-05-aout.html" class="btn btn-custom">Lire la suite</a>
 					</article>
