--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 	<head>
 		<title>Les Films de Plein Air</title>
 		
@@ -10,11 +10,11 @@
 		<meta name="description" content="">
 		
 		<!--Open graph data-->
-		<meta property="og:title" content=""/>
-		<meta property="og:type" content=""/>
-		<meta property="og:url" content=""/>
-		<meta property="og:image" content=""/>
-		<meta property="og:description" content=""/>
+		<meta property="og:title" content="">
+		<meta property="og:type" content="">
+		<meta property="og:url" content="">
+		<meta property="og:image" content="">
+		<meta property="og:description" content="">
 
 		<!--fonts-->
 		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Open+Sans:400,600,700" rel="stylesheet">
@@ -41,7 +41,7 @@
 		<!--00.header-->
 		<nav class="navbar sticky-top navbar-expand-lg navbar-dark maNav">
 			<a class="navbar-brand" href="#">
-				<img src="images/logo.jpg" width="100" alt="logo du site qui est une bobine"/>
+				<img src="images/logo.jpg" width="100" alt="logo du site qui est une bobine">
 			</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
@@ -78,6 +78,7 @@
 		<!--01.accueil-->
 		<section class="container-fluid welcome">
 			<div class="container">
+				<h2 class="visually-hidden">Accueil</h2>
 				<div class="row">
 					<aside class="col-lg-6">
 						
@@ -101,6 +102,7 @@
 		<!--02.à propos-->
 		<section class="container-fluid about">
 			<div class="container">
+				<h2 class="visually-hidden">Apropos</h2>
 				<div class="row">
 					<article class="col-lg-6">
 						<h2 id="about">-A propos de notre festival-</h2>
@@ -119,6 +121,7 @@
 		<!--03.actualité-->
 		<section class="container-fluid news">
 			<div class="container">
+				<h2 class="visually-hidden">Actualite</h2>
 				<div class="row">
 					<aside class="col-lg-6">
 						<img src="images/03-actuAside.jpg" class="img-fluid" alt="Actualité">
@@ -141,7 +144,7 @@
 		<!--04.films-->
 		<section class="container-fluid movie">
 			<div class="container">
-				
+				<h2 class="visually-hidden">Films</h2>
 				<div class="row">
 					<!--<div class="col-12 col-sm-4 col-md2 imgResponsive">
 						<a href="#"><img src="images/01lesFiguresDeLombre.png"></a>
@@ -192,6 +195,7 @@
 		<!--05.réservation-->
 		<section class="container-fluid booking">
 			<div class="container">
+				<h2 class="visually-hidden">Renovation</h2>
 				<div class="row">
 					<aside class="col-lg-6">
 						<img src="images/05-resaAside.jpg"class="img-fluid" alt="image avec écrit Newsletter dessus">
@@ -263,6 +267,7 @@
 		<!--06.contact-->
 		<section class="container-fluid contact">
 			<div class="container">
+				<h2 class="visually-hidden">Contact</h2>
 				<div class="row">
 					<aside class="col-lg-6">
 						<iframe src="images/Carte.jpg" width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen title="Carte de localisation"></iframe>
